--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "nodemon --exec babel-node -- server/index.js",
-    "test": "mocha -R spec --compilers js:babel-register spec/*.spec.js"
+    "dev-server": "nodemon --exec babel-node --presets env,react -- server/index.jsx",
+    "test": "mocha -R spec --compilers jsx:babel-register,js:babel-register spec/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/RocketVR/SteamClone#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -27,8 +28,10 @@
     "lodash": "^4.17.4",
     "nodejs": "0.0.0",
     "passport": "^0.4.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
   "devDependencies": {
@@ -51,7 +54,8 @@
   },
   "babel": {
     "presets": [
-      "env"
+      "env",
+      "react"
     ]
   },
   "eslintIgnore": [
