--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
   "homepage": "https://github.com/RocketVR/SteamClone#readme",
   "dependencies": {
     "axios": "^0.17.1",
-<<<<<<< Updated upstream
-=======
     "babel-polyfill": "^6.26.0",
->>>>>>> Stashed changes
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -31,13 +28,11 @@
     "lodash": "^4.17.4",
     "nodejs": "0.0.0",
     "passport": "^0.4.0",
-<<<<<<< Updated upstream
-=======
     "path": "^0.12.7",
     "prop-types": "^15.6.0",
->>>>>>> Stashed changes
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
   "devDependencies": {
