--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "nodemon --exec babel-node --presets env,react -- server/index.jsx",
+    "start": "node server/compiled/index.js",
+    "dev-server": "nodemon --exec babel-node --presets env,react -- server/index.js",
     "test": "mocha -R spec --compilers jsx:babel-register,js:babel-register spec/*.spec.js"
   },
   "repository": {
