--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -48,7 +49,6 @@
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.10",
-    "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.10.1",
     "webpack-hot-middleware": "^2.21.0"
