--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "igdb-api-node": "^3.1.1",
     "lodash": "^4.17.4",
     "nodejs": "0.0.0",
     "passport": "^0.4.0",
